deleted:    css/main copy.css 	modified:   css/main.css 	modified:   erotique.html 	new file:   "images/La Bourgeoise et le N\303\251cessiteux.png" 	new file:   images/Margarethe.png 	new file:   images/Partageuse de fesses s01.png 	new file:   images/Section 69.png 	deleted:    index copy 2.html 	deleted:    index copy.html 	modified:   index.html 	modified:   js/util1.js 	new file:   lecteur.html 	modified:   recherche.html

--- a/erotique.html
+++ b/erotique.html
@@ -25,6 +25,7 @@
 
 	<!-- Main CSS File -->
 	<link href="css/main.css" rel="stylesheet">
+	<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
 	<!-- =======================================================
   * @HopSyder Nexus Partners 
@@ -41,6 +42,7 @@
 		<a href="index.html" class="logo d-flex align-items-center justify-content-center text-center mb-4">
 			<!-- Uncomment the line below if you also wish to use an image logo -->
 			<!-- <img src="assets/img/logo.png" alt=""> -->
+
 			<h1 class="sitename" style="font-family: 'Dancing Script', cursive; font-weight: bold;">e-ROS</h1>
 		</a>
 
@@ -85,85 +87,51 @@
 				<!-- 1 -->
 				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
 					data-id="1">
-					<img src="document/erotique/section 69/pic.png" class="card-img-top manga-cover" alt="Section 69">
+					<img src="images/Section 69.png" class="card-img-top manga-cover" alt="Section 69">
 					<div class="card-body d-flex flex-column text-center">
 						<p class="card-title flex-grow-1">Section 69</p>
-						<a href="document/erotique/section 69/Section 69 chapitre 01.pdf" class="btn btn-custom mt-3"
-							download>Ouvrir<br>Télécharger</a>
-						<div class="star-rating">
-							<span class="star" data-rating="1">★</span>
-							<span class="star" data-rating="2">★</span>
-							<span class="star" data-rating="3">★</span>
-							<span class="star" data-rating="4">★</span>
-							<span class="star" data-rating="5">★</span>
-							<span class="rating-count">(25)</span>
-						</div>
+						<a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/17WGSoRrGpIwnyh21jbD9oNkWG5HFllZH/view?usp=drive_link">Ouvrir</a>
 					</div>
-
 				</div>
 
 				<!-- 2 -->
 				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
 					data-id="2">
-					<img src="document/erotique/Margarethe/pic.png" class="card-img-top manga-cover" alt="Margarethe">
+					<img src="images/Margarethe.png" class="card-img-top manga-cover" alt="Margarethe">
 					<div class="card-body d-flex flex-column text-center">
 						<p class="card-title flex-grow-1">Margarethe</p>
-						<a href="document/erotique/Margarethe/Margarethe 1.pdf" class="btn btn-custom mt-3"
-							download>Ouvrir<br>Télécharger</a>
-						<div class="star-rating">
-							<span class="star" data-rating="1">★</span>
-							<span class="star" data-rating="2">★</span>
-							<span class="star" data-rating="3">★</span>
-							<span class="star" data-rating="4">★</span>
-							<span class="star" data-rating="5">★</span>
-							<span class="rating-count">(25)</span>
-						</div>
+						<a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1ImMUZOMaap-Bl5_E3rQBFU8gtirT6ijf/view?usp=drive_link">Ouvrir</a>
 					</div>
 				</div>
 
 				<!-- 3 -->
 				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
 					data-id="3">
-					<img src="document/erotique/autre/La Bourgeoise et le Nécessiteux.png"
-						class="card-img-top manga-cover" alt="La Bourgeoise et le Nécessiteux">
+					<img src="images/La Bourgeoise et le Nécessiteux.png" class="card-img-top manga-cover"
+						alt="La Bourgeoise et le Nécessiteux">
 					<div class="card-body d-flex flex-column text-center">
 						<p class="card-title flex-grow-1">La Bourgeoise et le Nécessiteux</p>
-						<a href="document/erotique/autre/La Bourgeoise et le Nécessiteux.pdf"
-							class="btn btn-custom mt-3" download>Ouvrir<br>Télécharger</a>
-						<div class="star-rating">
-							<span class="star" data-rating="1">★</span>
-							<span class="star" data-rating="2">★</span>
-							<span class="star" data-rating="3">★</span>
-							<span class="star" data-rating="4">★</span>
-							<span class="star" data-rating="5">★</span>
-							<span class="rating-count">(23)</span>
-						</div>
+						<a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1hKOaRUAzSwDmJ51CTUI-K-OLy29EIuKY/view?usp=drive_link">Ouvrir</a>
 					</div>
 				</div>
 
 				<!-- 4 -->
 				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
 					data-id="4">
-					<img src="document/erotique/autre/Partageuse de fesses s01.png" class="card-img-top manga-cover"
-						alt="Couverture de manga: Partageuse de fesses s01, style érotique avec des personnages en tenue légère">
+					<img src="images/Partageuse de fesses s01.png" class="card-img-top manga-cover"
+						alt="Partageuse de fesses s01">
 					<div class="card-body d-flex flex-column text-center">
 						<p class="card-title flex-grow-1">Partageuse de fesses s01</p>
-						<a href="document/erotique/autre/Partageuse de fesses s01.pdf" class="btn btn-custom mt-3"
-							download>Ouvrir<br>Télécharger</a>
-						<div class="star-rating">
-							<span class="star" data-rating="1">★</span>
-							<span class="star" data-rating="2">★</span>
-							<span class="star" data-rating="3">★</span>
-							<span class="star" data-rating="4">★</span>
-							<span class="star" data-rating="5">★</span>
-							<span class="rating-count">(23)</span>
-						</div>
+						<a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1aM-fJN92UAJHPRAe6deFiaC63ON454EG/view">Ouvrir</a>
 					</div>
 				</div>
-
 			</div>
-
 		</section>
+		<!-- Section Érotiques -->
 
 		<!-- pieds de page -->
 		<footer>
@@ -175,7 +143,7 @@
 				<div class="footer-col">
 					<h3>Contact</h3>
 					<p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
-					<p><a href="mailto:eROS@gmail.com">eROS@gmail.com</a></p>
+					<p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
 				</div>
 			</div>
 			<div class="footer-bottom">
@@ -205,6 +173,21 @@
 	<script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
 	<script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
 	<script src="vendor/swiper/swiper-bundle.min.js"></script>
+
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+
+			document.querySelectorAll('.pdf-link').forEach(button => {
+				button.addEventListener('click', function (event) {
+					event.preventDefault(); // Empêche l'action par défaut du lien
+					const pdfUrl = this.getAttribute('data-pdf-url'); // Récupère l'URL du PDF
+					const pdfId = pdfUrl.split('/d/')[1].split('/')[0]; // Extraire l'ID du fichier
+					window.location.href = `LECTEUR.html?pdf=${pdfId}`; // Redirige vers lecteur.html avec l'ID du PDF
+				});
+			});
+		});
+
+	</script>
 
 	<!-- Main JS File -->
 	<script src="js/utils.js"></script>
