--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=fr">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -36,15 +36,13 @@
 
     <!-- Sidebar -->
     <header id="header" class="header bg-dark d-flex flex-column">
-        <i class="header-toggle d-xl-none bi bi-list mb-4"></i>
-
-        <a href="index.html" class="logo d-flex align-items-center justify-content-center text-center mb-4">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="assets/img/logo.png" alt=""> -->
+        <i class="header-toggle d-xl-none bi bi-list" style="margin-top: auto; margin-bottom: 20px;"></i>
+        <a href="index.html" class="logo d-flex align-items-center justify-content-left text-center"
+            style="margin-top: 40px; margin-bottom: 20px;">
             <h1 class="sitename" style="font-family: 'Dancing Script', cursive; font-weight: bold;">e-ROS</h1>
         </a>
 
-        <div class="social-links text-center">
+        <div class="social-links text-left">
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="#" class="google"><i class="bi bi-google"></i></a>
@@ -63,7 +61,6 @@
         </nav>
 
     </header>
-
 
     <main class="main">
 
@@ -87,7 +84,7 @@
             <div class="d-flex flex-wrap justify-content-center g-4 manga-grid">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/section 69/pic.png" class="card-img-top" alt="Section 69">
+                        <img src="images/Section 69.png" class="card-img-top" alt="Section 69">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">Section 69</p>
                             <a href="erotique.html#erotique#1" class="btn btn-custom mt-3">Voir plus</a>
@@ -96,7 +93,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/Margarethe/pic.png" class="card-img-top" alt="Margarethe">
+                        <img src="images/Margarethe.png" class="card-img-top" alt="Margarethe">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">Margarethe</p>
                             <a href="erotique.html#erotique#2" class="btn btn-custom mt-3">Voir plus</a>
@@ -105,7 +102,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/autre/La Bourgeoise et le Nécessiteux.png" class="card-img-top"
+                        <img src="images/La Bourgeoise et le Nécessiteux.png" class="card-img-top"
                             alt="La Bourgeoise et le Nécessiteux">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">La Bourgeoise et le Nécessiteux</p>
@@ -115,8 +112,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/autre/Partageuse de fesses s01.png" class="card-img-top"
-                            alt="Partageuse de fesses">
+                        <img src="images/Partageuse de fesses s01.png" class="card-img-top" alt="Partageuse de fesses">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">Partageuse de fesses</p>
                             <a href="erotique.html#erotique#4" class="btn btn-custom mt-3">Voir plus</a>
@@ -135,7 +131,7 @@
             <div class="d-flex flex-wrap justify-content-center g-4 manga-grid">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/section 69/pic.png" class="card-img-top" alt="Section 69">
+                        <img src="images/Section 69.png" class="card-img-top" alt="Section 69">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">Section 69</p>
                             <a href="erotique.html#erotique#1" class="btn btn-custom mt-3">Voir plus</a>
@@ -144,7 +140,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/Margarethe/pic.png" class="card-img-top" alt="Margarethe">
+                        <img src="images/Margarethe.png" class="card-img-top" alt="Margarethe">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">Margarethe</p>
                             <a href="erotique.html#erotique#2" class="btn btn-custom mt-3">Voir plus</a>
@@ -153,7 +149,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/autre/La Bourgeoise et le Nécessiteux.png" class="card-img-top"
+                        <img src="images/La Bourgeoise et le Nécessiteux.png" class="card-img-top"
                             alt="La Bourgeoise et le Nécessiteux">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">La Bourgeoise et le Nécessiteux</p>
@@ -163,8 +159,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
                     <div class="card h-100">
-                        <img src="document/erotique/autre/Partageuse de fesses s01.png" class="card-img-top"
-                            alt="Partageuse de fesses">
+                        <img src="images/Partageuse de fesses s01.png" class="card-img-top" alt="Partageuse de fesses">
                         <div class="card-body d-flex flex-column text-center">
                             <p class="card-title flex-grow-1">Partageuse de fesses</p>
                             <a href="erotique.html#erotique#4" class="btn btn-custom mt-3">Voir plus</a>
@@ -186,7 +181,7 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
-                    <p><a href="mailto:eROS@gmail.com">eROS@gmail.com</a></p>
+                    <p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -216,7 +211,8 @@
 
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
+            class="bi bi-arrow-up-short"></i>
+    </a>
 
     <!-- Preloader -->
     <div id="preloader"></div>
