--- a/recherche.html
+++ b/recherche.html
@@ -56,8 +56,8 @@
                 <li><a href="index.html"><i class="bi bi-house navicon"></i>Accueil</a></li>
                 <li><a href="index.html"><i class="bi bi-person navicon"></i>Nouveautés</a></li>
                 <li><a href="classique.html"><i class="bi bi-file-earmark-text navicon"></i>Classiques</a></li>
-                <li><a href="erotique.html" class="active"><i class="bi bi-envelope navicon"></i>Erotiques</a></li>
-                <li><a href="recherche.html"><i class="bi bi-images navicon"></i>Recherche</a></li>
+                <li><a href="erotique.html"><i class="bi bi-envelope navicon"></i>Erotiques</a></li>
+                <li><a href="recherche.html" class="active"><i class="bi bi-images navicon"></i>Recherche</a></li>
                 <li><a href="#"><i class="bi bi-images navicon"></i>Contactez-nous</a></li>
             </ul>
         </nav>
@@ -92,91 +92,55 @@
 
                 <!-- 1 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">Section 69 ep 1</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 01.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
+                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/17WGSoRrGpIwnyh21jbD9oNkWG5HFllZH/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
 
                 <!-- 2 -->
                 <div class="manga-item" data-id="2">
-                    <img src="document/erotique/Margarethe/pic.png"
+                    <img src="images/Margarethe.png"
                         alt="Couverture de manga: Margarethe, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">Margarethe</div>
-                        <div class="manga-author"><br /></div>
-                        <a href="document/erotique/Margarethe/Margarethe 1.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
+                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1ImMUZOMaap-Bl5_E3rQBFU8gtirT6ijf/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
 
                 <!-- 3 -->
                 <div class="manga-item" data-id="3">
-                    <img src="document/erotique/autre/La Bourgeoise et le Nécessiteux.png"
+                    <img src="images/La Bourgeoise et le Nécessiteux.png"
                         alt="Couverture de manga: La Bourgeoise et le Nécessiteux, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">La Bourgeoise et le Nécessiteux</div>
-                        <div class="manga-author"><br /></div>
-                        <a href="document/erotique/autre/La Bourgeoise et le Nécessiteux.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
+                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1hKOaRUAzSwDmJ51CTUI-K-OLy29EIuKY/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
 
                 <!-- 4 -->
                 <div class="manga-item" data-id="4">
-                    <img src="document/erotique/autre/Partageuse de fesses s01.png"
+                    <img src="images/Partageuse de fesses s01.png"
                         alt="Couverture de manga: Partageuse de fesses s01, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">Partageuse de fesses s01</div>
-                        <div class="manga-author"><br /></div>
-                        <a href="document/erotique/autre/Partageuse de fesses s01.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
+                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1aM-fJN92UAJHPRAe6deFiaC63ON454EG/view">Ouvrir</a>
                     </div>
                 </div>
 
                 <!-- 5 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -197,7 +161,7 @@
 
                 <!-- 6 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -218,7 +182,7 @@
 
                 <!-- 7 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -239,7 +203,7 @@
 
                 <!-- 8 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -260,7 +224,7 @@
 
                 <!-- 9 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -281,7 +245,7 @@
 
                 <!-- 10 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -302,7 +266,7 @@
 
                 <!-- 11 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -323,7 +287,7 @@
 
                 <!-- 12 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -344,7 +308,7 @@
 
                 <!-- 13 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -365,7 +329,7 @@
 
                 <!-- 14 -->
                 <div class="manga-item" data-id="1">
-                    <img src="document/erotique/section 69/pic.png"
+                    <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
@@ -383,6 +347,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
         </section>
 
         <!-- pieds de page -->
@@ -395,7 +361,7 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
-                    <p><a href="mailto:eROS@gmail.com">eROS@gmail.com</a></p>
+                    <p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
