Changes to be committed: 	modified:   classique.html 	modified:   erotique.html 	deleted:    images/banner.jpg 	modified:   index.html 	modified:   lecteur.html 	modified:   recherche.html 	new file:   tarif.html

--- a/erotique.html
+++ b/erotique.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>eROS - Manga Érotique</title>
 
+	<!-- Canonical URL -->
+	<link rel="canonical" href="https://www.e-ros.xyz">
 
+	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="images/favico.png">
+
+	<!-- Meta description pour SEO -->
+	<meta name="description"
+		content="eROS est un site dédié à la diffusion de mangas érotiques et adultes en PDF. Découvrez les derniers mangas japonais en ligne.">
+
+	<!-- Meta Keywords -->
+	<meta name="keywords"
+		content="manga érotique, manga adulte, manga en ligne, PDF manga, mangas japonais, mangas érotiques en PDF, eROS, site manga érotique">
+
+	<!-- Meta Robots pour l'indexation -->
+	<meta name="robots" content="index, follow">
+
+	<!-- Open Graph (pour optimiser le partage sur les réseaux sociaux) -->
+	<meta property="og:title" content="eROS - Manga Érotique en PDF">
+	<meta property="og:description"
+		content="Découvrez une large sélection de mangas érotiques et adultes en PDF sur eROS.">
+	<meta property="og:url" content="https://www.e-ros.xyz">
+	<meta property="og:image" content="https://www.e-ros.xyz/images/manga-cover.jpg">
+	<meta property="og:type" content="website">
+
+	<!-- Twitter Card (pour optimiser le partage sur Twitter) -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="eROS - Manga Érotique">
+	<meta name="twitter:description" content="Accédez à des mangas érotiques en PDF.">
+	<meta name="twitter:image" content="https://www.e-ros.xyz/images/manga-cover.jpg">
 
 	<!-- Bootstrap CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -25,28 +53,24 @@
 
 	<!-- Main CSS File -->
 	<link href="css/main.css" rel="stylesheet">
-	<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
 	<!-- =======================================================
-  * @HopSyder Nexus Partners 
-  ======================================================== -->
-
+          * @HopSyder Nexus Partners 
+        ======================================================== -->
 </head>
+
 
 <body class="index-page">
 
 	<!-- Sidebar -->
 	<header id="header" class="header bg-dark d-flex flex-column">
-		<i class="header-toggle d-xl-none bi bi-list mb-4"></i>
-
-		<a href="index.html" class="logo d-flex align-items-center justify-content-center text-center mb-4">
-			<!-- Uncomment the line below if you also wish to use an image logo -->
-			<!-- <img src="assets/img/logo.png" alt=""> -->
-
+		<i class="header-toggle d-xl-none bi bi-list" style="margin-top: auto; margin-bottom: 20px;"></i>
+		<a href="index.html" class="logo d-flex align-items-center justify-content-left text-center"
+			style="margin-top: 40px; margin-bottom: 20px;">
 			<h1 class="sitename" style="font-family: 'Dancing Script', cursive; font-weight: bold;">e-ROS</h1>
 		</a>
 
-		<div class="social-links text-center">
+		<div class="social-links text-left">
 			<a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
 			<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
 			<a href="#" class="google"><i class="bi bi-google"></i></a>
@@ -60,7 +84,7 @@
 				<li><a href="classique.html"><i class="bi bi-file-earmark-text navicon"></i>Classiques</a></li>
 				<li><a href="erotique.html" class="active"><i class="bi bi-envelope navicon"></i>Erotiques</a></li>
 				<li><a href="recherche.html"><i class="bi bi-images navicon"></i>Recherche</a></li>
-				<li><a href="#"><i class="bi bi-images navicon"></i>Contactez-nous</a></li>
+				<li><a href="tarif.html"><i class="bi bi-images navicon"></i>Tarifs</a></li>
 			</ul>
 		</nav>
 
