--- a/lecteur.html
+++ b/lecteur.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eROS - Manga Érotique</title>
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.e-ros.xyz">
 
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/favico.png">
+
+    <!-- Meta description pour SEO -->
+    <meta name="description"
+        content="eROS est un site dédié à la diffusion de mangas érotiques et adultes en PDF. Découvrez les derniers mangas japonais en ligne.">
+
+    <!-- Meta Keywords -->
+    <meta name="keywords"
+        content="manga érotique, manga adulte, manga en ligne, PDF manga, mangas japonais, mangas érotiques en PDF, eROS, site manga érotique">
+
+    <!-- Meta Robots pour l'indexation -->
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (pour optimiser le partage sur les réseaux sociaux) -->
+    <meta property="og:title" content="eROS - Manga Érotique en PDF">
+    <meta property="og:description"
+        content="Découvrez une large sélection de mangas érotiques et adultes en PDF sur eROS.">
+    <meta property="og:url" content="https://www.e-ros.xyz">
+    <meta property="og:image" content="https://www.e-ros.xyz/images/manga-cover.jpg">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card (pour optimiser le partage sur Twitter) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="eROS - Manga Érotique">
+    <meta name="twitter:description" content="Accédez à des mangas érotiques en PDF.">
+    <meta name="twitter:image" content="https://www.e-ros.xyz/images/manga-cover.jpg">
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -25,12 +53,10 @@
 
     <!-- Main CSS File -->
     <link href="css/main.css" rel="stylesheet">
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
     <!-- =======================================================
-  * @HopSyder Nexus Partners 
-  ======================================================== -->
-
+          * @HopSyder Nexus Partners 
+        ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -60,7 +86,7 @@
                 <li><a href="classique.html"><i class="bi bi-file-earmark-text navicon"></i>Classiques</a></li>
                 <li><a href="erotique.html" class="active"><i class="bi bi-envelope navicon"></i>Erotiques</a></li>
                 <li><a href="recherche.html"><i class="bi bi-images navicon"></i>Recherche</a></li>
-                <li><a href="#"><i class="bi bi-images navicon"></i>Contactez-nous</a></li>
+                <li><a href="tarif.html"><i class="bi bi-images navicon"></i>Tarifs</a></li>
             </ul>
         </nav>
 
