--- a/recherche.html
+++ b/recherche.html
@@ -122,7 +122,7 @@
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">Section 69 ep 1</div>
-                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
                             data-pdf-url="https://drive.google.com/file/d/17WGSoRrGpIwnyh21jbD9oNkWG5HFllZH/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">Margarethe</div>
-                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
                             data-pdf-url="https://drive.google.com/file/d/1ImMUZOMaap-Bl5_E3rQBFU8gtirT6ijf/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">La Bourgeoise et le Nécessiteux</div>
-                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
                             data-pdf-url="https://drive.google.com/file/d/1hKOaRUAzSwDmJ51CTUI-K-OLy29EIuKY/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">Partageuse de fesses s01</div>
-                        <a href="LECTEUR.html" class="btn btn-custom mt-3 pdf-link"
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
                             data-pdf-url="https://drive.google.com/file/d/1aM-fJN92UAJHPRAe6deFiaC63ON454EG/view">Ouvrir</a>
                     </div>
                 </div>
